- Changed version to beta19
- A last-minute fix, lalala...
*** beta19 release ***
- Changed the HOOKTYPE_REHASHFLAG syntax to (aClient *cptr, aClient *sptr, char *flag)
  requested by AngryWolf (#0001365)
- Added HOOKTYPE_PRE_LOCAL_PART to allow changing of part messages suggested by AngryWolf
  (#0001365)
- Fixed a bug with SVSNLINE - reported by FreakyComputer and fixed by AngryWolf 
  (#0001399)
- example.conf: added +i in modes-on-connect.
- Temporarely added fdlist debugcode, please report any bugreports it gives,
  it would especially be helpful if you know _what_ triggered the error :).
- '/rehash <server>' didn't reload motds&rules files, reported by w00t (#0001409).
- Added channelmode +T: no notices allowed in channel.
- Made ./Config create a tmp/ directory
- Rewrote some of the module system to allow /rehash to load a new version of a module i.e.
  after a newer version has been compiled. This also fixes the problem with hooks disappearing
  during a rehash (#0001332) reported by AngryWolf and (#0001325) reported by Cnils. This
  might need some testing.
- Fixed some problems with the copyfile routine for the new module rehash system and also fixed
  an issue with rehashing when permanent modules are loaded
- Made "chanop notices" only go to @#chan on non-prefixaq servers (and to ~&@#chan otherwise),
  internal: added ugly macro CHANOPPFX which is "~&@" if prefix_aq, else "@".
- Added error checking/error messages to new module reloading system, to catch errors like
  insufficient hd space, permission denied, etc..
- Made it compile at windows again
- Added set::static-part: similar to static-quit, default 'no' (static-part disabled).
  If set to 'yes' or '1' it will strip all part comments,
  if set to something else it will use that as a part comment.
- Partial cleanup of m_part (hopefully I didn't destroy anything).
- Minor stats compile warning fixed
- Started some work on the remote include system